--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.ShowActivity">
+        <meta-data android:name="android.support.PARENT_ACTIVITY"
+            android:value=".activity.MainActivity"/>
+        </activity>
         <activity
             android:name=".activity.WriteActivity"
             android:label="@string/title_activity_write">
-
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity"/>
         </activity>
-
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
